--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.jpa.hibernate.ddl-auto=update
 
 # Configuracao da JPA
 spring.jpa.show-sql=true
+
+api.security.token.secret=${JWT_SECRET:davimarcelaemily}
